Move code to keystone_voms.core and update docs
The code has been moved to keystone_voms/core.py so that it is not
anymore in __init__.py

The documentation has been updated to reflect the latest changes.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -45,7 +45,7 @@ clean:
 	-rm -rf $(BUILDDIR)/*
 
 autodoc:
-	$(SPHINXAPIDOC) -f -o $(SOURCEDIR) ../keystone
+	$(SPHINXAPIDOC) -f -o $(SOURCEDIR) ../keystone_voms
 
 html: autodoc
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
