Do not add a role with name/id that of a tenant

--- a/tests/keystone_voms.conf
+++ b/tests/keystone_voms.conf
@@ -2,5 +2,5 @@
 vomsdir_path = .
 ca_path = .
 voms_policy = voms.json
-vomsapi_lib = libvomsapi.so.1
+vomsapi_lib = libvomsapi.1.dylib
 autocreate_users = True
