--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ install:
     - git clone https://github.com/openstack/keystone/ -b stable/havana /tmp/keystone/
     - pip install -r /tmp/keystone/requirements.txt
     - pip install -r /tmp/keystone/test-requirements.txt
-    - pip install M2Crypto
+    - pip install -r requirements.txt
     - pip install .
     - cp tests/* /tmp/keystone/keystone/tests
 
 script:
     - pep8 keystone_voms
     - cd /tmp/keystone/
-    - nosetests
+    - nosetests keystone.tests.test_middleware_voms_authn
