--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = python-keystone-voms
-summary = Keystone VOMS module for Keystone (havana).
+summary = Keystone VOMS module for Keystone (Icehouse).
 description-file =
     README.md
 author = Spanish National Research Council (CSIC)
