--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
+version = 2014.1
 name = python-keystone-voms
 summary = Keystone VOMS module for Keystone (Icehouse).
 description-file =
