Do not import everything in __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ packages =
 
 [entry_points]
 paste.filter_factory =
-    voms_filter = keystone_voms:VomsAuthNMiddleware.factory
+    voms_filter = keystone_voms.core:VomsAuthNMiddleware.factory
 
 [build_sphinx]
 all_files = 1
