packaging: add debian revision and fix distribution

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 version = 2014.1
-name = python-keystone-voms
+name = keystone-voms
 summary = Keystone VOMS module for Keystone (Icehouse).
 description-file =
     README.md
