--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ python:
 install: 
     - sudo apt-get update
     - sudo apt-get install -y swig libvomsapi1
-    - git clone https://github.com/openstack/keystone/ -b stable/juno /tmp/keystone/
+    - git clone https://github.com/openstack/keystone/ -b stable/kilo /tmp/keystone/
     - pip install -r /tmp/keystone/requirements.txt
     - pip install -r /tmp/keystone/test-requirements.txt
     - pip install -r requirements.txt
     - pip install .
-    - cp tests/*py /tmp/keystone/keystone/tests
-    - cp tests/config_files/* /tmp/keystone/keystone/tests/config_files
+    - cp tests/*py /tmp/keystone/keystone/tests/unit
+    - cp tests/config_files/* /tmp/keystone/keystone/tests/unit/config_files
 
 script:
     - pep8 keystone_voms
     - cd /tmp/keystone/
-    - nosetests keystone.tests.test_middleware_voms_authn
+    - nosetests keystone.tests.unit.test_middleware_voms_authn
