--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-pbr>=0.6,!=0.7,<1.0
-M2Crypto
-python-keystone>=8.0.0,<9.0.0
+pbr!=0.7,<1.0,>=0.6
+M2Crypto<0.23
+keystone>=2015.1,<2015.2
+oslo.config<1.10.0,>=1.9.3
+oslo.log<1.1.0,>=1.0.0
+oslo.serialization<1.5.0,>=1.4.0
