Refactor VOMS support with pyOpenSSL
Add better support for VOMS handling by using pyOpenSSL instead of
M2Crypto. Moreover, the new VOMS object verifies the certificate against
its CA and CRLs, feature that was missing in the old handler.

Closes: #32
(cherry picked from commit dc5ebc118758fbd3b8dc1dd7285e50ab9b96bced)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = keystone-voms
+name = keystone_voms
 summary = Keystone VOMS module for Keystone.
 description-file =
     README.md
