docs: fix building of documentation
We do not need to install Keystone (in the requirements.txt file) to
generate the documentation.

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,9 @@ deps = coveralls
        {[testenv]deps}
 
 [testenv:docs]
+install_command = pip install -U --no-deps {opts} {packages}
+deps = -r{toxinidir}/doc-requirements.txt
+       -r{toxinidir}/test-requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:genconfig]
