Update documentation to Mitaka (9.0.0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ virtualenv:
     system_site_packages: true
 
 install:
-    - git clone https://github.com/openstack/keystone/ -b stable/liberty /tmp/keystone
+    - git clone https://github.com/openstack/keystone/ -b stable/mitaka /tmp/keystone
     - pip install /tmp/keystone
     - pip install tox
     - pip install -r requirements.txt
