--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ virtualenv:
 install:
     - git clone https://github.com/openstack/keystone/ -b stable/mitaka /tmp/keystone
     - pip install /tmp/keystone
+    - pip install -r /tmp/keystone/test-requirements.txt
     - pip install tox
     - pip install -r requirements.txt
     - pip install -r test-requirements.txt
