--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,3 @@
-# We need sudo until this pr gets merged
-# https://github.com/travis-ci/apt-package-whitelist/pull/2497
-sudo: true
-
-before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y libvomsapi1
-
 language: python
 python:
     "2.7"
@@ -15,19 +7,15 @@ addons:
         packages:
             - swig
             - libvomsapi1
-            - python-m2crypto
 
 virtualenv:
     system_site_packages: true
 
 install:
-    - git clone https://github.com/openstack/keystone/ -b stable/mitaka /tmp/keystone
-    - pip install /tmp/keystone
-    - pip install -r /tmp/keystone/test-requirements.txt
     - pip install tox
     - pip install -r requirements.txt
     - pip install -r test-requirements.txt
+    - pip install -e git+https://github.com/openstack/keystone@stable/mitaka#egg=keystone
 
 script:
-    - python setup.py testr --slowest
-    - flake8
+    - tox
