--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ setenv =
    VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
+       -egit+https://github.com/openstack/keystone@stable/liberty#egg=keystone
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
