Adapt code to stable/newton
These are changes only for the testing framework:

- Change conf import
- Add missing dependencies
- Use correct branch
- Stop using context in tests, but rather pass the request to the
  controllers.

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
    VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-       -egit+https://github.com/openstack/keystone@stable/liberty#egg=keystone
+       -egit+https://github.com/openstack/keystone@stable/newton#egg=keystone
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
